version change to java 1.8